# mddlib

./: .gitignore  CMakeLists.txt
src/: test_fsutils.cpp  test_ioutils.cpp  test_strutils.cpp  test_sysutils.cpp
src/mdd/: Message.cpp  Message.h  binaryarchive.h  fsutils.cpp  fsutils.h  ioutils.cpp  ioutils.h  lz4_stream.h  strutils.cpp  strutils.h  sysutils.cpp  sysutils.h
